--- a/CPCK/css/home.css
+++ b/CPCK/css/home.css
@@ -91,6 +91,10 @@
     font-size: 30px;
 }
 
+.link{
+    color: rgb(0, 133, 162);
+}
+
 
 
 #place{
@@ -152,6 +156,7 @@ form{
 h1{
     font-size: 70px;
     margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 input{
@@ -162,6 +167,7 @@ input{
     background-color: rgb(52, 52, 52);
     color: white;
     font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 input:focus{
@@ -180,6 +186,7 @@ button{
     border-radius: 5px;
     font-weight: bold;
     font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -193,12 +200,13 @@ button:active{
     transition: 0s;
 }
 
-a{
+form a{
     color: white;
     color: rgb(0, 208, 255);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-a:hover{
+form a:hover{
     color: rgb(0, 133, 162);
     transition: 0.3s ease-in-out;
 }
