--- a/CPCK/css/login-register.css
+++ b/CPCK/css/login-register.css
@@ -17,7 +17,7 @@ form{
     border: 2px solid orange;
     background-color: rgb(52, 52, 52);
     color: white;
-    font-family: 'Gillrgb(71, 71, 71) Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     border-radius: 25px;
     min-width: 490px;
@@ -27,6 +27,7 @@ h1{
     font-size: 80px;
     margin-bottom: 20px;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 input{
@@ -37,6 +38,7 @@ input{
     background-color: rgb(52, 52, 52);
     color: white;
     font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 input:focus{
@@ -55,6 +57,7 @@ button{
     border-radius: 5px;
     font-weight: bold;
     font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -71,6 +74,7 @@ button:active{
 a{
     color: white;
     color: rgb(0, 208, 255);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a:hover{
