--- a/CPCK/css/main.css
+++ b/CPCK/css/main.css
@@ -25,7 +25,7 @@ html{
 #nav {
     display: flex;
     color: white;
-    background-color: rgb(35, 35, 35);
+    background-color: rgb(18, 18, 18);
     justify-content: space-around;
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -59,7 +59,7 @@ html{
 #login-register {
     display: flex;
     justify-content: space-around;
-
+    width: 170px;
 }
 
 .element a,
