--- a/CPCK/css/room.css
+++ b/CPCK/css/room.css
@@ -5,54 +5,18 @@
     gap: 30px;
     padding-top: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    flex-direction: column;
+}
+
+#content-search{
+    color: white;
+    margin: auto;
+    font-size: 30px;
 }
 
 .content-content{
-    width: 75%;
-}
-
-.content-sort{
-    width: 25%;
-    color: white;
-    padding: 30px;
-    border: solid 3px white;
-    height: fit-content;
-   
-    
-}
-
-.content-sort ul{
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 10px;
-}
-
-.content-sort ul li a{
-    color: white;
-}
-
-.content-sort ul li a:hover{
-    color: aqua;
-    transition: all 0.3s ease-in-out;
-}
-
-.title {
-    background-color: rgb(35, 35, 35);
-    color: white;
-    width: 100%;
+    width: 80%;
     margin: auto;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-}
-
-.title span {
-    color: white;
-    font-size: 30px;
 }
 
 #content{
@@ -71,7 +35,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 5px;
-    border-radius: 12px;
+    height: 300px;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -83,8 +47,7 @@
 
 .box img {
     width: 100%;
-    height: 80%;
-    border-radius: 12px;
+    height: 400px;
 }
 
 .box figcaption{
@@ -95,3 +58,37 @@
     font-size: 25px;
 
 }
+
+.box button{
+    color: white;
+    background-color: red;
+    border: none;
+}
+
+#add-room{
+    width: 30%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#add-room a{
+    color: white;
+    border: none;
+    background-color: rgb(255, 128, 0);
+    font-size: 20px;
+    padding: 10px 20px;
+}
+
+#add-room a:hover{
+    background-color: rgb(211, 107, 3);
+    transition: 0.3s ease-in-out;
+}
+
+#add-room a:active{
+    background-color: rgb(148, 76, 3);
+    color: grey;
+    transition: 0.1s;
+}
+
